add config boilerplate

--- a/config/user_config.json
+++ b/config/user_config.json
@@ -1,7 +1,7 @@
 {
-    "name": "Adamay Mann",
-    "email": "am14579@nyu.edu",
-    "linkedin_url": "https://www.linkedin.com/in/adamaymann7/",
-    "portfolio_url": "https://adamaymann.servatom.com",
+    "name": "John Doe",
+    "email": "john.doe@gmail.com",
+    "linkedin_url": "https://www.linkedin.com/in/john-doe/",
+    "portfolio_url": "https://johndoe.isawesome.com",
     "position": "Summer Intern 2025"
 }
